client/src/components/profile/NewProfileViews/GeneralConfig/NewProfileGeneralForm.scss
#new-prof-gen-form {
  width: 90%;
  padding: 60px;
  background-color: #263041;
}

#new-prof-gen-form > div {
  width: 525px;
}

#new-prof-gen-form > div > div,
#new-prof-gen-form > div > div > div > input {
  width: 460px;
}

#root #new-prof-gen-form > div > div > div > input {
  margin-top: 20px;
}

#root #new-prof-gen-form > div > div > div {
  margin-bottom: 30px;
}


#new-prof-gen-form > div > div > ul>li {
  font-size: 14px;
  line-height: 17px;
}

#new-prof-gen-form > div > div > ul {
  margin:0px;
  padding:0;
  height: 125px;
  list-style-type: none;
}

#certification-checkbox {
  top: 30px;

}

